--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "elevated-process",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A small wrapper on node's native `child_process`. It can start an elevated child process (run as aminstrator) using `spawn`, `exec`, `fork`, `spawnSync` or `execSync` from a non-elevated process; offering stdin, stdout and stderr on the elevated process",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "rimraf dist/ && babel ./src --out-dir dist/ --copy-files",
     "start": "npm run build && node dist"
